SEO 2: Fix footer (#348)
* Fixed About Us and  Contact Us Links, Added Services and Blogs Link, Make Prixite Logo Link and Updated date

* Fix Footer Completed

* Fix Footer Completed

* Changed footer elements into links

* Finalizing

* Removed Pre-commit Error

* Fixed Prixit not visible in header

--- a/components/Presentational/Title/Title.scss
+++ b/components/Presentational/Title/Title.scss
@@ -9,6 +9,7 @@
     cursor: pointer;
   }
   .title-heading {
+    color: black;
     font-size: 22px;
     font-weight: 800;
     text-transform: uppercase;
